<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TimePicker
        android:id="@+id/timePicker_startingTime"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"
        android:elevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:onClick="add"
        android:text="@string/button_add"
        android:elevation="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker_startingTime" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="20dp"
        android:onClick="subtract"
        android:text="@string/button_subtract"
        android:elevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/timePicker_amountToAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker_startingTime" />

    <TimePicker
        android:id="@+id/timePicker_amountToAdd"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="@+id/timePicker_startingTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/timePicker_startingTime"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />


    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculate"
        android:text="@string/button_calculate"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker_amountToAdd" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textSize="20sp"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate" />

    <Button
        android:id="@+id/button_armyTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:onClick="armyTime"
        android:text="@string/button_armyTime"
        android:gravity="top|end"
        android:elevation="-12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_amPm"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_amPm"
        android:layout_width="0dp"
        android:layout_height="733dp"
        android:onClick="amPm"
        android:text="@string/button_amPm"
        android:gravity="top|start"
        android:elevation="-12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_armyTime"
        app:layout_constraintEnd_toStartOf="@+id/button_armyTime"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />


</android.support.constraint.ConstraintLayout>